Refactor equals test